<resources>
    <string name="server_url">https://beverleebank.net/</string>
    <string name="dev_server_url">https://test.beverleebank.net</string>
    <string name="init_fragment">Init Fragment</string>
    <string name="input_phone_fragment">Input Phone Fragment</string>
    <string name="input_sms_fragment">Input Sms Fragment</string>
    <string name="app_name">BeverLee Bank</string>
    <string name="action_settings">Settings</string>
    <string name="logo_content_desc">BeverLee Logo</string>
    <string name="text_content_desc">BeverLee Text</string>
    <string name="sign_up">Создать новый аккаунт</string>
    <string name="signing">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="input_phone">Введите ваш номер телефона</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="new_account">Новый аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="full_name">Полное имя</string>
    <string name="fio">Ф.И.О</string>
    <string name="phone_number_unified">Номер телефона в международном формате</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Эл. почта</string>
    <string name="password_text">Придумайте пароль</string>
    <string name="repeat_password_text">Повторите</string>
    <string name="user_agreement">Я согласен с <u>Пользовательским соглашением</u>"\n"BeverLee</string>
    <string name="create_pin">Создайте PIN-код</string>
    <string name="enter_pin">Введите PIN-код</string>
    <string name="repeat_pin">Повторите PIN-код</string>
    <string name="forgot_pin">Забыли PIN-код?</string>
    <string name="or_enter_pin">Или введите PIN-код</string>
    <string name="change_pin"> Сменить PIN-код </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="welcome_text">Добро пожаловать, </string>
    <string name="firstname_text">Александр!</string>
    <string name="sms_text">Подтверждение СМС</string>
    <string name="input_sms">Введите 5-значный код, который мы"\n"отправили на номер:</string>
    <string name="hidden_digits">**** ** *** </string>
    <string name="last_two_digits">54 55</string>
    <string name="send_again">Отправить снова</string>
    <string name="code_through_call">Код через звонок</string>
    <string name="counter_text">00:00</string>
    <string name="face_id_text">Пожалуйста, наведите"\n"фронтальную камеру на лицо</string>
    <string name="fingerprint_text">Пожалуйста, приложите палец"\n"к сканеру для авторизации</string>
    <string name="success_face_id">Принято!</string>
    <string name="success_fingerprint">Отпечаток принят!</string>
    <string name="home">Кабинет</string>
    <string name="monitoring">Мониторинг</string>
    <string name="cards">Карты</string>
    <string name="contact_name">Георгий Павлович</string>
    <string name="contact_id">ID %d</string>
    <string name="balance">Баланс счета</string>
    <string name="current_balance">$ %s</string>
    <string name="replenish">Пополнить</string>
    <string name="withdraw">Вывести</string>
    <string name="profit">Доходы за май</string>
    <string name="advert_content">Выводите ваши"\n"средства, на карту"\n"Mastercard под 0%</string>
    <string name="monitoring_header">Мониторинг счета</string>
    <string name="income">Доходы</string>
    <string name="expenditure">Траты</string>
    <string name="income_or_expenditure">%1$s за </string>
    <string name="monthly_balance">%1$s <b>%2$.2f $</b></string>
    <string name="bonus">Бонус</string>
    <string name="beverlee">BEVERLee</string>
    <string name="received">Получено</string>
    <string name="vladislav_romanov">Владислав Романов</string>
    <string name="card_number">4108 59** **** 8230</string>
    <string name="plus_200">+ 200 $</string>
    <string name="transaction_amount">%1$s %2$.2f $</string>
    <string name="may_12">12 мая</string>
    <string name="may_10">10 мая</string>
    <string name="contacts">Контакты</string>
    <string name="all">Все</string>
    <string name="favorites">Избранные</string>
    <string name="contact_name_1">Аброр Турсунов</string>
    <string name="contact_name_2">Нигора Икромова</string>
    <string name="transfer">Перевод</string>
    <string name="add_to_favorites">Добавить в избранные</string>
    <string name="delete">Удалить</string>
    <string name="delete_from_favorites">Удалить из избранных</string>
    <string name="my_cards">Мои карты</string>
    <string name="card">Card</string>
    <string name="card_no">1234 5678 9012 3456</string>
    <string name="card_username">Антон Камушкин</string>
    <string name="card_expiration_date">01/08</string>
    <string name="edit">Редактировать</string>
    <string name="accessible">Доступно</string>
    <string name="replenishment">Пополнение</string>
    <string name="withdrawal">Вывод</string>
    <string name="dispatch">Отправление</string>
    <string name="choose_a_card">Выберите карту</string>
    <string name="card_name">Название карты</string>
    <string name="successful_transaction">Операция успешна!</string>
    <string name="successful_withdrawal_request">Запрос на вывод средств успешно отправлен!</string>
    <string name="failed_transaction">Что-то пошло не так!</string>
    <string name="send">Отправить</string>
    <string name="card_number_">Номер на карте</string>
    <string name="sender">Кому</string>
    <string name="name_on_card">Имя, фамилия на карте</string>
    <string name="month_year">%1$s %2$s</string>
    <string name="security_code">Защитный код</string>
    <string name="security_code_hint">779</string>
    <string name="amount">Сумма</string>
    <string name="create_card">Добавить карту</string>
    <string name="phone_hint">+998 00 000 00 00</string>
    <string name="phone_hint_uz">+998 00 000 00 00</string>
    <string name="password_hint">****</string>
    <string name="first_name_hint">Введите имя</string>
    <string name="last_name_hint">Введите фамилию</string>
    <string name="email_hint">Введите почту</string>
    <string name="verification_code">Введите pin код</string>
    <string name="enter_code">Введите код</string>
    <string name="search">Поиск</string>
    <string name="zero">0</string>
    <string name="phone_or_id">Номер телефона или ID</string>
    <string name="low_current_balance"> Баланс не может быть меньше суммы перевода </string>
    <string name="profile">Профиль</string>
    <string name="profile_name">%1$s %2$s</string>
    <string name="identifier">Идентификатор: %s</string>
    <string name="club_number">Клубный номер: %s</string>
    <string name="logout"> Выйти из профиля </string>
    <string name="pick_image">Выберите фото</string>
    <string name="personal_data">Персональные данные</string>
    <string name="position">Должность</string>
    <string name="contact_number">Контактный номер</string>
    <string name="country">Страна</string>
    <string name="first_name_example">Людмила</string>
    <string name="last_name_example">Плюшкина</string>
    <string name="position_example">Массажист</string>
    <string name="contact_number_example">99899 554 26 59</string>
    <string name="email_example">example@list.com</string>
    <string name="country_example">Uzbekistan</string>
    <string name="save">Сохранить</string>
    <string name="settings"> Настройки </string>
    <string name="notifications">Уведомления</string>
    <string name="notify_default">Включить пуш-уведомления</string>
    <string name="notify_news">Уведомлять о новостях</string>
    <string name="notify_bonuses">Уведомлять о получении"\n"бонусов</string>
    <string name="notify_income">Уведомлять о получении"\n"средств</string>
    <string name="notify_purchase">Уведомлять о покупке"\n"продукта</string>
    <string name="notify_debit">Уведомлять о пополнении"\n"баланса</string>
    <string name="notify_withdrawal">Уведомлять о выводе средств</string>
    <string name="password_change">Смена пароля</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтвердите новый пароль</string>
    <string name="date_example">15.06.20</string>
    <string name="time_example">13:32</string>
    <string name="push_example">Вклад \"Smart Вклад\" успешно"\n"открыт</string>
    <string name="apply">Применить</string>
    <string name="calendar">Календарь</string>
    <string name="choose_a_period">Выберите период</string>
    <string name="add_card">Добавить карту</string>
    <string name="add">Добавить</string>
    <string name="to_main">На главную</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beverlee_web_url">https://beverleebank.com/login</string>
    <string name="open_registration_instruction">Открыть инструкцию по регистрации</string>
    <string name="registration_instruction">
        Код подтверждения выслан на указанный
        номер телефона, если код подтверждения
        не пришел на указанный номер, то через 2
        минуты попробуйте снова получить код.</string>
    <string name="city">Город</string>
    <string name="recipient_data">Данные получателя %s</string>
    <string name="amount_with_commission">Сумма с комиссией: %.2f</string>
    <string name="middle_name">Отчество</string>
    <string name="middle_name_example">Рустамовна</string>
    <string name="city_example">Tashkent</string>
    <string name="address">Адрес</string>
    <string name="address_example">Юнусабад-8,22,28</string>
    <string name="news">Новости</string>
    <string name="news_title_example">Семь причин купить японские бады</string>
    <string name="news_date_example">05.06.2021</string>
    <string name="news_content_example">Лекарства будущего. В современной  Японии осталось совсем немного аптек.  Их практически заменили  специализированные сети по продаже  БАДов и так называемых  категориальных лекарств. В Японии  заботятся о здоровье нации и именно  поэтому повсеместно заменили  лекарства супер-эффективными  биодобавками. Не упустите ваш шанс прикоснуться к здоровью будущего  сегодня!  Японское долголетие. Японцы издавна  славятся своим долголетием.  Восемьдесят лет для современного</string>
    <string name="submit">Подтвердить</string>
    <string name="delete_avatar">Удалить фото</string>
    <string name="pin_change_method">Выберите способ получения нового pin кода</string>
    <string name="send_sms">Отправить смс</string>
    <string name="voice_message">Голосовое сообщение</string>
    <string name="submit_new_pin">Подтвердите новый pin код</string>
    <string name="current_pin">Текущий pin код</string>
    <string name="new_pin">Новый pin код</string>
</resources>