<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ChangePinFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/change_pin_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_layout"
        android:layout_marginTop="40dp"
        android:text="@string/change_pin"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:fontFamily="@font/geometria_medium"
        android:textSize="19sp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/back_arrow_image_view"
        android:layout_width="0dp"
        android:layout_height="22.4dp"
        app:layout_constraintTop_toTopOf="@id/change_pin_text_view"
        app:layout_constraintBottom_toBottomOf="@id/change_pin_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back_vector"
        android:contentDescription="@string/transfer"/>

    <View
        android:id="@+id/card_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/change_pin_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/card_top_radius_light"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="always"/>

    <TextView
        android:id="@+id/pin_change_method_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/card_layout"
        app:layout_constraintStart_toStartOf="@id/card_layout"
        android:layout_marginStart="37dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/pin_change_method"
        android:textColor="#3B3A39"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/request_pin_by_sms_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pin_change_method_text_view"
        app:layout_constraintStart_toStartOf="@id/card_layout"
        app:layout_constraintEnd_toStartOf="@id/request_pin_by_call_btn"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="29dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/btn_orange"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/geometria_medium"
        android:textSize="14sp"
        android:text="@string/send_sms"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/request_pin_by_call_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/card_layout"
        app:layout_constraintTop_toTopOf="@id/request_pin_by_sms_btn"
        app:layout_constraintStart_toEndOf="@id/request_pin_by_sms_btn"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/btn_grey"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/geometria_medium"
        android:textSize="14sp"
        android:text="@string/voice_message"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/old_pin_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/request_pin_by_sms_btn"
        app:layout_constraintStart_toStartOf="@id/old_pin_edit_text"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/current_pin"
        android:textColor="#3B3A39"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/old_pin_edit_text"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="@id/request_pin_by_sms_btn"
        app:layout_constraintEnd_toEndOf="@id/request_pin_by_call_btn"
        app:layout_constraintTop_toBottomOf="@id/old_pin_text_view"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_locked"
        android:fontFamily="@font/geometria_medium"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:textColor="@color/colorBlack"
        android:letterSpacing="0.2"
        android:textColorHint="@color/colorLightGrey"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/new_pin_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/old_pin_edit_text"
        app:layout_constraintStart_toStartOf="@id/old_pin_text_view"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/new_pin"
        android:textColor="#3B3A39"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/new_pin_edit_text"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="@id/old_pin_edit_text"
        app:layout_constraintEnd_toEndOf="@id/old_pin_edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_pin_text_view"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_locked"
        android:fontFamily="@font/geometria_medium"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:textColor="@color/colorBlack"
        android:letterSpacing="0.2"
        android:textColorHint="@color/colorLightGrey"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/new_pin_confirmation_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_pin_edit_text"
        app:layout_constraintStart_toStartOf="@id/new_pin_text_view"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/submit_new_pin"
        android:textColor="#3B3A39"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/new_pin_confirmation_edit_text"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="@id/old_pin_edit_text"
        app:layout_constraintEnd_toEndOf="@id/old_pin_edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_pin_confirmation_text_view"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_locked"
        android:fontFamily="@font/geometria_medium"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:textColor="@color/colorBlack"
        android:letterSpacing="0.2"
        android:textColorHint="@color/colorLightGrey"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/counter_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/new_pin_confirmation_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/new_pin_confirmation_edit_text"
        app:layout_constraintEnd_toEndOf="@id/new_pin_confirmation_edit_text"
        android:layout_marginEnd="20dp"
        android:text="@string/counter_text"
        android:fontFamily="@font/geometria_medium"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="@id/new_pin_confirmation_edit_text"
        app:layout_constraintEnd_toEndOf="@id/new_pin_confirmation_edit_text"
        app:layout_constraintTop_toBottomOf="@id/new_pin_confirmation_edit_text"
        android:background="@drawable/btn_purple"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:fontFamily="@font/geometria_medium"
        android:textColor="#fff"
        android:textSize="17sp"
        android:layout_marginVertical="24dp"
        android:elevation="2dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"
        app:layout_constraintBottom_toBottomOf="@id/card_layout"
        app:layout_constraintStart_toStartOf="@id/card_layout"
        app:layout_constraintEnd_toEndOf="@id/card_layout"
        android:indeterminateTint="@color/colorPurple"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>