<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/view_holder_layout"
    android:background="#FFF"
    android:layout_marginTop="14dp">

    <ImageView
        android:id="@+id/avatar_image_view"
        android:layout_width="59dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circle_grey"
        android:elevation="8dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="38dp"
        android:contentDescription="@string/contact_name" />

    <ImageView
        android:id="@+id/check_image_view"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:background="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="@id/avatar_image_view"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image_view"
        android:layout_marginEnd="-4dp"
        android:elevation="8dp"
        android:contentDescription="@string/card"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/avatar_image_view"
        app:layout_constraintTop_toTopOf="@id/avatar_image_view"
        app:layout_constraintBottom_toBottomOf="@id/avatar_image_view"
        app:layout_constraintEnd_toStartOf="@id/fav_icon_image_view"
        android:layout_marginHorizontal="16dp"
        android:textColor="#3B3A39"
        android:textSize="16sp"
        android:fontFamily="@font/geometria_medium"
        android:text="@string/contact_name_1" />

    <ImageView
        android:id="@+id/fav_icon_image_view"
        android:layout_width="24dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/name_text_view"
        app:layout_constraintBottom_toBottomOf="@id/name_text_view"
        app:layout_constraintStart_toEndOf="@id/name_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="31dp"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_star_yellow"
        android:contentDescription="@string/add_to_favorites" />

    <View
        android:id="@+id/stroke_text_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#EBEBEB"
        android:layout_marginHorizontal="21dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>